# camoufox-mcp-python

./: .gitignore  .mcp.json  README.md  README_zh.md  RELEASING.md  pyproject.toml
.claude/: CLAUDE.md
.omc/: project-memory.json
.omc/plans/: camoufox-mcp-v1.md  open-questions.md
.omc/sessions/: 28192dc1-38d7-40e3-b4b2-31b1cce3b647.json  42a7dca2-653f-4377-a4d0-db7f0ad6d74b.json  6fead7de-ff1d-408f-82dc-ba3db4d0166f.json  6ffc8634-2877-41dd-81e8-c5a73cc463de.json  8302c059-65c0-4ed7-846f-7f7653df71d9.json  8730a904-3c21-4c22-860e-18b60f1ffb35.json  ab0bd520-f41c-4782-8d59-15f645373a5c.json  b317b901-1d92-4ea0-b851-4e30395631a5.json
.omc/specs/: deep-interview-camoufox-mcp.md
.omc/state/: agent-replay-6fead7de-ff1d-408f-82dc-ba3db4d0166f.jsonl  agent-replay-8730a904-3c21-4c22-860e-18b60f1ffb35.jsonl  agent-replay-b317b901-1d92-4ea0-b851-4e30395631a5.jsonl  idle-notif-cooldown.json  last-tool-error.json
.omc/state/sessions/di-camoufox-mcp-001/: deep-interview-state.json
camoufox_mcp/: __main__.py  config.py  context.py  response.py  server.py  snapshot.py  tab.py
camoufox_mcp/tools/: __init__.py  common_tools.py  dangerous_tools.py  decorators.py  file_tools.py  input_tools.py  navigate_tools.py  page_tools.py  snapshot_tools.py  tab_tools.py
scripts/: release_check.sh
tests/: test_response.py
